--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,28 @@
         const res = await api.get("/v1/file/link", {
           params: {
             application: "conductor-client",
-            path: serverPath,
+            path: serverPath,async function getLinks(serverPath: string) {
+  // serverPath vem tipo: "9fa84395-32a7-4b14-b79e-82f23905a130/document.pdf"
+  const encoded = encodeURIComponent(serverPath); // -> "9fa8...%2Fdocument.pdf"
+
+  const { data } = await api.get(`/v1/file/conductor-client/${encoded}`);
+  const { url, urlPreview } = data.data;
+  return { url, urlPreview };
+}
+
+
+
+async function getLinks(serverPath: string) {
+  try {
+    const encoded = encodeURIComponent(serverPath);
+    const { data } = await api.get(`/v1/file/conductor-client/${encoded}`);
+    return { url: data.data.url, urlPreview: data.data.urlPreview };
+  } catch (e) {
+    console.error("Erro buscando link do arquivo", e);
+    return { url: "", urlPreview: "" };
+  }
+}
+
           },
         });
         const { url, urlPreview } = res.data.data; // conforme seu backend
