--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
-// Se você quiser pegar URL assinada agora, use essa função.
-// Se preferir fazer no Documents.tsx, só retorne sem ela.
 async function getSignedLink(path: string) {
-  const res = await api.get("/v1/file/link", {
-    params: {
-      application: "conductor-client",
-      path,
-    },
-  });
-  return res.data.data as { url: string; urlPreview: string };
+  // path: "9fa84395-32a7-4b14-b79e-82f23905a130/document.pdf"
+  const encoded = encodeURIComponent(path);
+  try {
+    const { data } = await api.get(`/v1/file/conductor-client/${encoded}`);
+    // ou `/v1/file/conductor-wire-temp/${encoded}` se esse for o bucket certo
+    return {
+      url: data.data.url,
+      urlPreview: data.data.urlPreview,
+    };
+  } catch (err) {
+    console.error("Erro ao buscar link assinado:", err);
+    return { url: "", urlPreview: "" };
+  }
 }
