--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
-async function getSignedLink(path: string) {
-  // path: "9fa84395-32a7-4b14-b79e-82f23905a130/document.pdf"
-  const encoded = encodeURIComponent(path);
-  try {
-    const { data } = await api.get(`/v1/file/conductor-client/${encoded}`);
-    // ou `/v1/file/conductor-wire-temp/${encoded}` se esse for o bucket certo
-    return {
-      url: data.data.url,
-      urlPreview: data.data.urlPreview,
-    };
-  } catch (err) {
-    console.error("Erro ao buscar link assinado:", err);
-    return { url: "", urlPreview: "" };
-  }
-}
+Error: Route "/Wire-Transfer---USD/[requestId]" used `params.requestId`. `params` should be awaited before using its properties. Learn more: https://nextjs.org/docs/messages/sync-dynamic-apis     
+    at Page (src\app\(private)\Wire-Transfer---USD\[requestId]\page.tsx:14:68)
+  12 |       <div className="flex min-h-screen flex-col items-center">
+  13 |         <PageTabs
+> 14 |           params={{ requestName: "wire-trasnfer", requestId: params.requestId }}
+     |                                                                    ^
+  15 |           tabTriggerType="request"
+  16 |         />
+  17 |       </div>
+
+Chat, como eu li route só te contar que page esta aqui:
+
+Z:\workspace\wire-client-frontend\src\app\(private)\Wire-Transfer---USD\[requestId]\page.tsx
+
